tests/pass/phosphor-icon-suffix.tsx
// Correct Icon suffix is fine.
import { HouseIcon } from "@phosphor-icons/react";
import { ArrowRightIcon, CheckIcon } from "@phosphor-icons/react";
