tests/fail/phosphor-icon-suffix.tsx
// Missing Icon suffix should trigger.
import { House } from "@phosphor-icons/react";
import { ArrowRight, CheckIcon } from "@phosphor-icons/react";
